# AI-Joke-Generator

./: .env.example  .gitignore  Documentatie_AI_Joke_Generator.docx  README.md  README_ERIC.md  README_Lucas.md  README_Rares.md  config.py  gui.py  joke_generator.py  main.py  pyproject.toml  stt_engine.py  text_processing.py  tts_engine.py  utils.py
src/: config.py  gui.py  joke_generator.py  prompts.py  tts_engine.py  utils.py
